  - New Java Wrappers
  - New Java sample: SimpleViewer.java
  - Add support for Capri devkits
  - Added tools: PS1080Console and PSLinkConsole (for debugging purposes)
  - Drivers and INI files path resolution based on the shared library location (merge pull request #7. See https://github.com/OpenNI/OpenNI2/pull/7 for details. Thanks to Tomoto)
  - NiViewer: Allow choosing which streams to open (run "NiViewer --help" for details)
  - Image registration support for Kinect driver (merge pull request #4. See https://github.com/OpenNI/OpenNI2/pull/4 for details. Thanks to Tomoto)
  - Completely re-wrote frame buffers management. 
  - Added API for replacing frame buffer allocator.
  - Linux: implement connect/disconnect events
  - PS1080: IR stream now also supports RGB888
  - PS1080: improved hardware name detection
  - PS1080: Add NESA unlimited to BIST
  - PrimeSense: move common properties (PS1080 and Capri) to PrimeSense.h
  - PS1080: add new property for turning on hardware frame sync, with no OpenNI checks
  - New pixel format: YUYV. PS1080 now supports it (on newer firmwares), and so does NiViewer and recordings.
  - PS1080: add lots of debug commands
  - PS1080: add new file type (vendor data)
  - PS1080: added support for the second alternative interface (low-bandwidth)
  - PS1080: added support for IR stream from the AR130 CMOS
  - PS1080: added support for turning on/off emitter
  - Bug Fixes:
    - Bug Fix: reading frames / waiting on streams did not work well from multiple threads
    - Bug Fix: Failed to use after OpenCL was initialized
    - Bug Fix: Visual Sutdio 2008 wasn't supported
    - PS1080 Linux did not support the RD1.09 device
    - PS1080 Bug Fix: Physical device name property could not be read
    - Make sure device is still open when closing a stream that uses it.
    - PS1080 Bug Fix: handle file system lock when uploading only in supporting firmwares
    - PS1080 Bug Fix: LED API wasn't working