@@ -26,6 +26,7 @@ import sys
 import shutil
 import platform
 import stat
+import xml.dom.minidom
 
 class Harvest:
     def __init__(self, rootDir, outDir, arch):
@@ -123,7 +124,10 @@ class Harvest:
             shutil.copytree(os.path.join(self.rootDir, 'ThirdParty', 'GL', 'GL'), os.path.join(sampleTargetDir, 'GL'))
             shutil.copytree(os.path.join(self.rootDir, 'ThirdParty', 'GL', 'glh'), os.path.join(sampleTargetDir, 'glh'))
             # and lib
-            shutil.copy(os.path.join(self.rootDir, 'ThirdParty', 'GL', 'glut' + self.glutSuffix + '.lib'), sampleTargetDir)
+            shutil.copy(os.path.join(self.rootDir, 'ThirdParty', 'GL', 'glut32.lib'), sampleTargetDir)
+            shutil.copy(os.path.join(self.rootDir, 'ThirdParty', 'GL', 'glut64.lib'), sampleTargetDir)
+            shutil.copy(os.path.join(self.rootDir, 'ThirdParty', 'GL', 'glut32.dll'), sampleTargetDir)
+            shutil.copy(os.path.join(self.rootDir, 'ThirdParty', 'GL', 'glut64.dll'), sampleTargetDir)
                     
         # and project file / makefile
         if self.osName == 'Windows':
@@ -131,21 +135,75 @@ class Harvest:
                 shutil.copy(os.path.join(sampleSourceDir, 'Build.bat'), sampleTargetDir)
                 shutil.copy(os.path.join(self.rootDir, 'ThirdParty', 'PSCommon', 'BuildSystem', 'BuildJavaWindows.py'), sampleTargetDir)
                 # fix call
-                self.regxReplace(r'..\\\\..\\\\ThirdParty\\\\PSCommon\\\\BuildSystem\\\\', '', os.path.join(sampleTargetDir, 'Build.bat'))
+                buildFile = open(os.path.join(sampleTargetDir, 'Build.bat'))
+                buildScript = buildFile.read()
+                buildFile.close()
+
+                buildScript = re.sub('..\\\\..\\\\ThirdParty\\\\PSCommon\\\\BuildSystem\\\\', '', buildScript)
+                buildScript = re.sub('..\\\\..\\\\Bin', 'Bin', buildScript)
+
+                buildFile = open(os.path.join(sampleTargetDir, 'Build.bat'), 'w')
+                buildFile.write('@echo off\n')
+                buildFile.write('IF "%1"=="x64" (\n')
+                buildFile.write('\txcopy /D /S /F /Y "%OPENNI2_REDIST64%\\*" "Bin\\x64-Release\\"\n')
+                buildFile.write(') ELSE (\n')
+                buildFile.write('\txcopy /D /S /F /Y "%OPENNI2_REDIST%\\*" "Bin\\Win32-Release\\"\n')
+                buildFile.write(')\n')
+                buildFile.write(buildScript)
+                buildFile.close()
+                
             else:
                 shutil.copy(os.path.join(sampleSourceDir, name + '.vcxproj'), sampleTargetDir)
-                # fix output dir
-                self.regxReplace('<OutDir>\$\(SolutionDir\)Bin\\\\\$\(Platform\)-\$\(Configuration\)', '<OutDir>$(ProjectDir)..\\Bin', os.path.join(sampleTargetDir, name + '.vcxproj'))
-                # fix intermediate dir
-                self.regxReplace('<IntDir>\$\(SolutionDir\)Bin', '<IntDir>$(ProjectDir)..\\Bin', os.path.join(sampleTargetDir, name + '.vcxproj'))
-                # fix OpenNI include dir
-                self.regxReplace('..\\\\..\\\\Include', '$(OPENNI2_INCLUDE' + self.platformSuffix + ')', os.path.join(sampleTargetDir, name + '.vcxproj'))
-                # fix GL include dir
-                self.regxReplace('..\\\\..\\\\ThirdParty\\\\GL', '.', os.path.join(sampleTargetDir, name + '.vcxproj'))
-                # fix Common include dir
-                self.regxReplace('..\\\\Common', '.', os.path.join(sampleTargetDir, name + '.vcxproj'))
-                # fix library dir
-                self.regxReplace('<AdditionalLibraryDirectories>\$\(OutDir\)', '<AdditionalLibraryDirectories>$(OutDir);$(OPENNI2_LIB' + self.platformSuffix + ')', os.path.join(sampleTargetDir, name + '.vcxproj'))
+                projFile = os.path.join(sampleTargetDir, name + '.vcxproj')
+                #ET.register_namespace('', 'http://schemas.microsoft.com/developer/msbuild/2003')
+                doc = xml.dom.minidom.parse(projFile)
+                
+                # remove OutDir and IntDir (make them default)
+                for propertyGroup in doc.getElementsByTagName("PropertyGroup"):
+                    if len(propertyGroup.getElementsByTagName("OutDir")) > 0:
+                        propertyGroup.parentNode.removeChild(propertyGroup)
+                
+                for group in doc.getElementsByTagName("ItemDefinitionGroup"):
+                    condAttr = group.getAttribute('Condition')
+                    if condAttr.find('x64') != -1:
+                        postfix = '64'
+                        glPostfix = '64'
+                    else: 
+                        postfix = ''
+                        glPostfix = '32'
+                        
+                    incDirs = group.getElementsByTagName('ClCompile')[0].getElementsByTagName('AdditionalIncludeDirectories')[0]
+                    val = incDirs.firstChild.data
+
+                    # fix GL include dir
+                    val = re.sub('..\\\\..\\\\ThirdParty\\\\GL', r'.', val)
+                    # fix Common include dir
+                    val = re.sub('..\\\\Common', r'.', val)
+                    # fix OpenNI include dir
+                    val = re.sub('..\\\\..\\\\Include', '$(OPENNI2_INCLUDE' + postfix + ')', val)
+                    
+                    incDirs.firstChild.data = val
+
+                    # fix additional library directories
+                    libDirs = group.getElementsByTagName('Link')[0].getElementsByTagName('AdditionalLibraryDirectories')[0]
+                    val = libDirs.firstChild.data
+                    val = re.sub('\$\(OutDir\)', '$(OutDir);$(OPENNI2_LIB' + postfix + ')', val)
+                    libDirs.firstChild.data = val
+                    
+                    # add post-build event to copy OpenNI redist
+                    post = doc.createElement('PostBuildEvent')
+                    cmd = 'xcopy /D /S /F /Y "$(OPENNI2_REDIST' + postfix + ')\*" "$(OutDir)"\n'
+                    if isGL:
+                        cmd += 'xcopy /D /F /Y "$(ProjectDir)\\glut' + glPostfix + '.dll" "$(OutDir)"\n'
+                        
+                    cmdNode = doc.createElement('Command')
+                    cmdNode.appendChild(doc.createTextNode(cmd))
+                    post.appendChild(cmdNode)
+                    group.appendChild(post)
+                
+                proj = open(projFile, 'w')
+                proj.write(doc.toxml())
+                proj.close()
                 
         elif self.osName == 'Linux' or self.osName == 'Darwin':
             shutil.copy(os.path.join(sampleSourceDir, 'Makefile'), sampleTargetDir)
@@ -158,8 +216,22 @@ class Harvest:
                 shutil.copy(os.path.join(rootDir, 'ThirdParty', 'PSCommon', 'BuildSystem', 'CommonJavaMakefile'), sampleTargetDir)
             else:
                 shutil.copy(os.path.join(rootDir, 'ThirdParty', 'PSCommon', 'BuildSystem', 'CommonCppMakefile'), sampleTargetDir)
-            # fix includes
+                
+            # fix common makefiles path
             self.regxReplace('../../ThirdParty/PSCommon/BuildSystem/', '', os.path.join(sampleTargetDir, 'Makefile'))
+            
+            # fix BIN dir
+            self.regxReplace('BIN_DIR = ../../Bin', 'BIN_DIR = Bin', os.path.join(sampleTargetDir, 'Makefile'))
+            
+            # fix include dirs and copy openni_redist
+            add = r'INC_DIRS += $(OPENNI2_INCLUDE)\n\n'
+            add += r'include \1\n\n'
+            add += r'.PHONY: copy-redist\n'
+            add += r'copy-redist:\n'
+            add += r'\tcp -R $(OPENNI2_REDIST)/* $(OUT_DIR)\n'
+            add += r'$(OUTPUT_FILE): copy-redist'
+            
+            self.regxReplace(r'include (Common.*Makefile)', add, os.path.join(sampleTargetDir, 'Makefile'))
 
         # and executable
         if isJava:
