@@ -167,6 +167,7 @@ public class VideoFrameRef {
   }
     
   private VideoFrameRef(long handle) { 
+    NativeMethods.oniFrameAddRef(handle);
     mFrameHandle = handle;
   }
 
